examples/kubectl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: voatsap
    labels:
        name: voatsap
        environment: development
    annotations:
        description: "Namespace for voatsap applications"
