examples/kubectl/pod-random-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random-generator
  labels:
    app: random-generator
    version: "1.0"
spec:
  containers:
  - image: k8spatterns/random-generator:1.0
    name: random-generator
    ports:
    - containerPort: 8080
      name: http
    volumeMounts:
    - mountPath: "/logs"
      name: log-volume
  volumes:
  - name: log-volume
    persistentVolumeClaim:
      claimName: random-generator-log
  restartPolicy: Always
